@@ -1,23 +1,26 @@
 package love.shop.web.cart.dto;
 
 import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
 import love.shop.domain.cart.Cart;
 import love.shop.web.itemCart.dto.ItemCartDto;
-import love.shop.web.login.dto.MemberDto;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
+@Slf4j
 public class CartDto {
 
     private Long id;
+    private Long member;
     private List<ItemCartDto> itemCarts;
-    private MemberDto member;
 
     public CartDto(Cart cart) {
         this.id = cart.getId();
-        this.itemCarts = cart.getItemCartList().stream().
-                map(itemCart -> new ItemCartDto(itemCart)).toList();
-        this.member = member;
+        this.member = cart.getMember().getId();
+        this.itemCarts = cart.getItemCarts() != null ? cart.getItemCarts().stream()
+                .map(itemCart -> new ItemCartDto(itemCart))
+                .collect(Collectors.toList()) : null;
     }
 }
